# Python

./: Assignment4.ipynb  Translation.py  jupyterassignment1.ipynb  list_assignment_asmat mehmood.pynp.ipynb
Assignment 2 to 5/: assignment 2 python string concatenation assignment.ipynb
chat_bot_llm/: README.md  pyproject.toml
chat_bot_llm/chat_bot_llm/: main.py
loan_pred_app/: Dockerfileapi  Dockerfileapp  Modle_Code.ipynb  README.md  compose.yaml  pyproject.toml  webapp.py
loan_pred_app/ServiceApi/: requirements.txt  webapi.py
