[tool.poetry]
name = "loan-pred-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
streamlit = "^1.35.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
pydentic = "^0.0.1.dev3"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
psycopg2 = "^2.9.9"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
